--- a/MauiBlazor/Shared/NavMenu.razor
+++ b/MauiBlazor/Shared/NavMenu.razor
@@ -24,6 +24,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="pokerclient">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Poker Client
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="pokerleader">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Poker Leader
+            </NavLink>
+        </div>
     </nav>
 </div>
 
