changed fib component

--- a/MauiBlazor/Components/Poker/FibonacciStyle/FibonacciSelectCard.razor
+++ b/MauiBlazor/Components/Poker/FibonacciStyle/FibonacciSelectCard.razor
@@ -1,16 +1,16 @@
-﻿<button @onclick="(args) => SelectedValue(args, 1)">1</button>
-<button @onclick="(args) => SelectedValue(args, 2)">2</button>
-<button @onclick="(args) => SelectedValue(args, 3)">3</button>
-<button @onclick="(args) => SelectedValue(args, 5)">5</button>
-<button @onclick="(args) => SelectedValue(args, 8)">8</button>
-<button @onclick="(args) => SelectedValue(args, 13)">13</button>
+﻿@foreach(int number in fibNumbers)
+{
+    <button @onclick="()=>SelectedValue(number)">@number</button>
+}
 
 @code {
     [Parameter]
     public EventCallback<int> OnSelectedValue { get; set; }
 
-    void SelectedValue(MouseEventArgs e, int value)
+    private int[] fibNumbers= new[] {1,2,3,5,8,13};
+
+    Task SelectedValue(int value)
     {
-        OnSelectedValue.InvokeAsync(value);
+        return OnSelectedValue.InvokeAsync(value);
     }
 }
