--- a/MauiBlazor/Pages/PokerClient.razor
+++ b/MauiBlazor/Pages/PokerClient.razor
@@ -5,22 +5,34 @@
 @inject NavigationManager NavManager;
 @implements IAsyncDisposable;
 
-<h1>Poker cliebnt</h1>
-
-Select Card
-
-Messages:
-@foreach (var message in messages)
+<h1>Poker client</h1>
+@if (!roomJoined)
 {
-    <p>@message.Question</p>
+    <label>Join room: 
+    <input @bind="roomInput"/></label>
+    <button @onclick="RoomSubmit">Join Room</button>
 }
+else
+{
+    <h2>Room: @_room</h2>
+    <h1>Select Card</h1>
 
-<FibonacciSelectCard OnSelectedValue="(value) => Send(value)" />
+    <h4>Messages:</h4>
+    @foreach (var message in messages)
+    {
+        <p>@message.Question</p>
+    }
+
+    <FibonacciSelectCard OnSelectedValue="(value) => Send(value)" />
+}
 
 @code {
     HubConnection hubConnection;
     List<PokerQuestionData> messages = new();
     string messageInput = "";
+    private string roomInput = "";
+    private string _room = "";
+    private bool roomJoined;
 
     protected override async Task OnInitializedAsync()
     {
@@ -45,7 +57,12 @@ Messages:
     {
         if (hubConnection is not null)
         {
-            await hubConnection.SendAsync("Vote", new PokerVoteData { Value = vote });
+            var voteObj = new PokerVoteData
+            {
+                Value = vote,
+                RoomName = _room
+            };
+            await hubConnection.SendAsync("Vote", voteObj);
         }
     }
 
@@ -55,5 +72,12 @@ Messages:
         {
             await hubConnection.DisposeAsync();
         }
+    }
+    private async Task RoomSubmit()
+    {
+        _room = roomInput;
+        roomInput = "";
+        roomJoined = true;
+        await hubConnection.SendAsync("JoinRoom", _room);
     }
 }
