--- a/MauiBlazor/Pages/Index.razor
+++ b/MauiBlazor/Pages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/index"
 @using Microsoft.AspNetCore.SignalR.Client;
 @inject NavigationManager NavManager;
 @implements IAsyncDisposable;
