--- a/MauiBlazor/Shared/NavMenu.razor
+++ b/MauiBlazor/Shared/NavMenu.razor
@@ -10,7 +10,8 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <!--<NavLink class="nav-link" href="index" Match="NavLinkMatch.All">-->
+                <NavLink class="nav-link" href="index">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
@@ -25,7 +26,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="pokerclient">
+            <NavLink class="nav-link" href="">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Poker Client
             </NavLink>
         </div>
