--- a/MauiBlazor/Pages/Index.razor
+++ b/MauiBlazor/Pages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/index"
+﻿@page "/"
 @using Microsoft.AspNetCore.SignalR.Client;
 @inject NavigationManager NavManager;
 @implements IAsyncDisposable;
