--- a/MauiBlazor/Shared/NavMenu.razor
+++ b/MauiBlazor/Shared/NavMenu.razor
@@ -10,8 +10,7 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <!--<NavLink class="nav-link" href="index" Match="NavLinkMatch.All">-->
-                <NavLink class="nav-link" href="index">
+            <NavLink class="nav-link" href="index" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
@@ -26,7 +25,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="">
+            <NavLink class="nav-link" href="pokerclient">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Poker Client
             </NavLink>
         </div>
