--- a/MauiBlazor/wwwroot/css/css.css
+++ b/MauiBlazor/wwwroot/css/css.css
@@ -6,7 +6,6 @@
     border-radius: 5px;
     display: flex;
     flex-direction: column;
-    color: #f6f6f6;
     background-color: #f9f9f9;
     justify-content: space-between;
 }
@@ -41,7 +40,7 @@
     flex-grow: 1;
     /* background-color: #3333aa; */
 
-    padding: 20x;
+    padding: 20px;
     text-align: right;
     font-size: 24pt;
     font-weight: bold;
