--- a/MauiBlazor/Pages/Poker/PokerLeader.razor
+++ b/MauiBlazor/Pages/Poker/PokerLeader.razor
@@ -40,8 +40,7 @@
 				<span>Votes: @Votes.Count()</span><br />
 				@foreach (var vote in Votes)
 				{
-					@vote.UserName <>has voted.</>
-					<br />
+					<p>@vote.UserName has voted.</p>
 				}
 				<a @onclick="() => page++">Show results</a>
 			}
@@ -97,7 +96,7 @@ else
 }*@
 
 @code {
-	public List<PokerQuestionData> Questions { get; set; } = new();
+	public List<PokerFeatureData> Questions { get; set; } = new();
 	public List<PokerVoteData> Votes { get; set; } = new();
 	public string Question { get; set; } = "";
 	HubConnection hubConnection;
@@ -127,9 +126,9 @@ else
 
 	private async Task SendQuestion()
 	{
-		var question = new PokerQuestionData()
+		var question = new PokerFeatureData()
 		{
-			Question = Question,
+			Feature = Question,
 			RoomName = _room
 		};
 
@@ -154,7 +153,7 @@ else
 		roomInput = "";
 		roomJoined = true;
 		page++;
-		await hubConnection.SendAsync("JoinRoom", new PokerDTO() {Room = _room});
+		await hubConnection.SendAsync("JoinRoom", new PokerClientSettings() {Room = _room});
 		await hubConnection.SendAsync("RoomInvite", new PokerInvite() { Room = _room });
 	}
 	private void NextFeature()
