--- a/MauiBlazor/Shared/MainLayout.razor
+++ b/MauiBlazor/Shared/MainLayout.razor
@@ -3,7 +3,28 @@
 <div class="page">
 
     <main>
+        <div class="app-container">
+            <div class="header">
+                <a href="index.html">
+                    <img src="arrow-back.png" class="header-item item1" />
+                </a>
+                <div class="header-item item2"></div>
+                <div class="header-item appname">
+                    5 Dimensions of Agile
+                </div>
+            </div>
+            <div class="main">
 
             @Body
+
+            </div>
+            <div class="footer">
+                <div class="header-item elicit">
+                    Elicit
+                </div>
+                <div class="header-item item2"></div>
+                <div class="header-item item1"></div>
+            </div>
+        </div>
     </main>
 </div>
